# TCMCP-core

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp  vcpkg.json
.github/workflows/: android_build.yml  ios_build.yml  macos_build.yml  window_build.yml
tcmcp/huangdineijing/: eight_principles_diagnosis.cpp  eight_principles_diagnosis.h
tcmcp/jinkuiyaolue/: prescriptions.cpp  prescriptions.h
tcmcp/shanghanzabinglun/: six_stage_diagnosis.cpp  six_stage_diagnosis.h
tcmcp/shennongbencaojing/: tcm.cpp  tcm.h
tcmcp/zhenjiudacheng/: acupoints.cpp  acupoints.h  meridians.cpp  meridians.h
test/: test_shanghan.cpp
